--- a/src/components/book-preview/book-preview.scss
+++ b/src/components/book-preview/book-preview.scss
@@ -1,3 +1,60 @@
 book-preview {
-
+    .book_preview {
+        background-color: #FFFFFF;
+        width: 170px;
+        height: 260px;
+        margin: 80px auto;
+        position: relative;
+        &__cover {
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: 100% 100%;
+            position: relative;
+            width: 100%;
+            height: 100%;
+            box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 20px rgba(0, 0, 0, 0.1) inset;
+            &:before,
+            &:after {
+                position: absolute;
+                content: "";
+                bottom: 12px;
+                left: 15px;
+                top: 80%;
+                width: 45%;
+                background: #999;
+                z-index: -1;
+                -webkit-box-shadow: 0 20px 15px #999;
+                -moz-box-shadow: 0 20px 15px #999;
+                box-shadow: 0 20px 15px #999;
+                -webkit-transform: rotate(-6deg);
+                -moz-transform: rotate(-6deg);
+                transform: rotate(-6deg);
+            }
+            &:after {
+                -webkit-transform: rotate(6deg);
+                -moz-transform: rotate(6deg);
+                transform: rotate(6deg);
+                right: 15px;
+                left: auto;
+            }
+            &__glance {
+                position: absolute;
+                top: 0;
+                left: 10px;
+                bottom: 0;
+                z-index: 1;
+                width: 3px;
+                background: rgba(0, 0, 0, 0.06);
+                box-shadow: 1px 0 3px rgba(255, 255, 255, 0.1);
+            }
+        }
+        &__info {
+            text-align: center;
+            margin-top: 10px;
+            &__title {
+                font-size: 1.2em;
+                color: #444;
+            }
+        }
+    }
 }
